--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 
-minecraft_version=1.21.9
+minecraft_version=1.21.11
 enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
@@ -12,26 +12,26 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=20.0.148
+cloth_config_version=21.11.151
 mixinextras_version=0.5.0
 parchment_version=
 
 # fabric
-fabric_loader_version=0.17.2
-modmenu_version=16.0.0-rc.1
+fabric_loader_version=0.18.2
+modmenu_version=17.0.0-alpha.1
 
 # (neo)forge
 forge_version=54.0.16
-neoforge_version=21.9.0-beta
+neoforge_version=21.11.6-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.9 <1.21.11
-fabric_game_versions=1.21.9, 1.21.10
-forge_game_version_range=[1.21.9, 1.21.11)
-forge_game_versions=1.21.9, 1.21.10
-neoforge_game_version_range=[1.21.9, 1.21.11)
-neoforge_game_versions=1.21.9, 1.21.10
+fabric_game_version_range=>=1.21.11
+fabric_game_versions=1.21.11
+forge_game_version_range=[1.21.11,)
+forge_game_versions=1.21.11
+neoforge_game_version_range=[1.21.11,)
+neoforge_game_versions=1.21.11
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
